# fcitx5-tmux

./: CMakeLists.txt  README.md  fcitx5.tmux.in
src/: main.cpp
